# powr

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  TODO
.github/: CODEOWNERS
.github/workflows/: tests.yml
examples/: fibonacci.js  fizzbuzz.js  values.js
pkg/compiler/: Cargo.toml
pkg/compiler/src/: main.rs
pkg/parser/: Cargo.toml
pkg/parser/src/: grammar.pest  javascript.pest  lib.rs  main.rs
pkg/powr/: Cargo.toml
pkg/tokenizer/: Cargo.toml  README.md
pkg/tokenizer/src/: lib.rs
pkg/tokenizer/src/token/: mod.rs
samples/: README.md  variable.ts
scripts/: compile.sh
src/: backend_runner.rs  compiler.rs  main.rs  middleend_runner.rs
