[package]
name = "powr"
description = "compile ts/js code into binaries"
authors = ["Max Power <alex@alexaa.dev>"]
repository = "https://github.com/powr/powr"
readme = "README.md"
version = "0.4.0"
edition = "2021"
license = "SSPL-1.0"

[dependencies]
deno_ast = { version = "0.21.0", features = ["transforms", "visit", "typescript"] }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0", "default", "internal-getters"] }
