[package]
name = "power-parser"
description = "parses tokens into AST. part of the power project"
version = "0.1.0"
authors = ["Max Power <alex@alexaa.dev>"]
repository = "https://github.com/minsk-dev/power"
readme = "README.md"
edition = "2021"
license = "SSPL-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
