[package]
name = "powr"
description = "entry point for the powr project"
authors = ["Max Power <alex@alexaa.dev>"]
repository = "https://github.com/powr/powr"
readme = "../../README.md"
version = "0.3.0"
edition = "2021"
license = "SSPL-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
