[package]
name = "power-tokenizer"
description = "converts JS/TS code into tokens"
authors = ["Max Power <alex@alexaa.dev>"]
repository = "https://github.com/minsk-dev/power"
version = "0.1.0"
edition = "2021"
license-file = "../../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]