[package]
name = "powr-tokenizer"
description = "converts JS/TS code into tokens. part of the power project."
authors = ["Max Power <alex@alexaa.dev>"]
repository = "https://github.com/minsk-dev/power"
readme = "README.md"
version = "0.3.0"
edition = "2021"
license = "SSPL-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
